--- a/style.css
+++ b/style.css
@@ -25,14 +25,14 @@ body {
 }
 .card {
     background: var(--White);
-    width: 385px;
+    width: 24.06em;
     border-radius: 20px;
     border: 1px solid var(--Gray-950);
     box-shadow: 5px 5px 0 var(--Gray-950);
-    padding: 23px;
+    padding: 1.4em;
     display: flex;
     flex-direction: column;
-    gap: 23px;
+    gap: 1.4em;
 }
 .image {
     width: 100%;
@@ -72,7 +72,7 @@ body {
 
 @media screen and (max-width: 375px){
     .card {
-        margin: 23px;
+        margin: 1.4em;
     }
 }
 
